@@ -24,6 +24,9 @@
 /s6-svlisten1
 /s6-svlisten
 /s6-notifyoncheck
+/s6-svdt
+/s6-svdt-clear
+/s6-permafailon
 /s6-envdir
 /s6-envuidgid
 /s6-fghack
