@@ -157,6 +157,8 @@ a user interface to control those processes and monitor service states.
 <li><a href="s6-svlisten.html">The <tt>s6-svlisten</tt> program</a></li>
 <li><a href="s6-notifyoncheck.html">The <tt>s6-notifyoncheck</tt> program</a></li>
 <li><a href="s6-svdt.html">The <tt>s6-svdt</tt> program</a></li>
+<li><a href="s6-svdt-clear.html">The <tt>s6-svdt-clear</tt> program</a></li>
+<li><a href="s6-permafailon.html">The <tt>s6-permafailon</tt> program</a></li>
 </ul>
 
 <h4> Daemontools-like utilities </h4>
