@@ -16,10 +16,10 @@
 <a href="//skarnet.org/">skarnet.org</a>
 </p>
 
-<h1> The s6-svdt program </h1>
+<h1> The <tt>s6-svdt</tt> program </h1>
 
 <p>
-s6-svstat prints the recorded death tally of a service, i.e. a list of the times
+<tt>s6-svdt</tt> prints the recorded death tally of a service, i.e. a list of the times
 the process died, with the cause of death.
 </p>
 
@@ -30,7 +30,7 @@ the process died, with the cause of death.
 </pre>
 
 <p>
- s6-svdt prints the contents of the recorded death tally of the service being
+ <tt>s6-svdt</tt> prints the contents of the recorded death tally of the service being
 currently supervised at the <em>servicedir</em>
 <a href="servicedir.html">service directory</a>, then exits 0.
 </p>
