@@ -22,7 +22,11 @@
 
 <ul>
  <li> skalibs dependency bumped to 2.6.4.0. </li>
- <li> New command: <a href="s6-svdt.html">s6-svdt</a>. </li>
+ <li> New commands: <a href="s6-svdt.html">s6-svdt</a>,
+<a href="s6-svdt-clear.html">s6-svdt-clear</a>,
+<a href="s6-permafailon.html">s6-permafailon</a> </li>
+ <li> <a href="s6-tai64nlocal.html">s6-tai64nlocal</a> can now
+print GMT times with the <tt>-g</tt> option. </li>
 </ul>
 
 <h2> in 2.7.0.0 </h2>
