@@ -15,10 +15,12 @@ s6-svscanctl \
 s6-svok \
 s6-svstat \
 s6-svdt \
+s6-svdt-clear \
 s6-svwait \
 s6-svlisten1 \
 s6-svlisten \
 s6-notifyoncheck \
+s6-permafailon \
 s6-envdir \
 s6-envuidgid \
 s6-fghack \
